# conette-audio-captioning

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  environment-train.yaml  hubconf.py  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt
.github/workflows/: conette.yaml  inference.yaml  python-package-pip.yaml  training.yaml
results/: README.md
results/conette/: outputs_audiocaps_test.csv  outputs_clotho_eval.csv  scores_audiocaps_test.yaml  scores_clotho_eval.yaml
results/detailed_outputs/: scores_audiocaps_test.yaml  scores_clotho_eval.yaml
src/conette/: __init__.py  info.py  predict.py  prepare.py  retrieve.py  train.py
src/conette/callbacks/: aac_evaluator.py  aac_validator.py  custom_ckpt.py  debug.py  deepspeed.py  log.py  resume.py  stats_saver.py  time.py
src/conette/datamodules/: __init__.py  aac_dm.py  collate.py  common.py  hdf.py
src/conette/datasets/: typing.py  utils.py
src/conette/datasets/hdf/: __init__.py  common.py  dataset.py  pack.py
src/conette/huggingface/: config.py  model.py  preprocessor.py  setup.py
src/conette/metrics/: cross_referencing.py  retrieval.py
src/conette/metrics/classes/: all_metrics.py  bert_score_mrefs.ign.py  diversity.py  jaccard.py  new_words.py  null.py  self_bleu.py  tensor.py  text_stats.py  wmd.py
src/conette/metrics/functional/: bert_score_mrefs.ign.py  div_n.py  diversity.py  jaccard.py  new_words.py  self_bleu.py  text_stats.py  torch_cider_d.py  wmd.py
src/conette/nn/: ckpt.py  cnext_ckpt_utils.py  huggingface.py
src/conette/nn/decoders/: aac_tfmer.py
src/conette/nn/decoding/: beam.py  common.py  forcing.py  greedy.py
src/conette/nn/encoders/: cnn10.py  cnn14.py  cnn14_decisionlevel_att.py  convnext.py  ident.py
src/conette/nn/functional/: crop.py  drop.py  get.py  indexes.py  init.py  label.py  mask.py  misc.py  multilabel.py  pad.py  repeat.py
src/conette/nn/loss/: ce_mean.py
src/conette/nn/modules/: crop.py  drop.py  misc.py  norm.py  pad.py  positional_encoding.py  tensor.py
src/conette/nn/pann_utils/: ckpt.py  hub.py  models.py  pytorch_utils.py
src/conette/optim/: cyclic_cos_decay.py  optimizers.py  schedulers.py
src/conette/pl_modules/: base.py  baseline.py  common.py  conette.py
src/conette/tokenization/: __init__.py  aac_tokenizer.py  constants.py  normalizers.py
src/conette/tokenization/tokenizers/: base.py  common.py  factory.py  ptb.py  spacy.py  word.py  wrapper.py
src/conette/transforms/: audioset_labels.py  audioset_mapping.py  get.py  mixup.py  speed_perturb.py  utils.py
src/conette/transforms/audio/: cutoutspec.py  resample.py  spec_aug.py  speed_perturb.py
src/conette/utils/: cmdline.py  collections.py  csum.py  csv_utils.py  custom_logger.py  dcase.py  disk_cache.py  func_utils.py  hydra.py  log_utils.py  misc.py  type_checks.py  yaml_utils.py
src/conf/: __init__.py  prepare.yaml  retrieve.yaml  train.yaml
src/conf/audio_t/: none.yaml  resample_mean_cnn10.yaml  resample_mean_cnn14.yaml  resample_mean_cnn14_att.yaml  resample_mean_convnext.yaml  spec_aug_emb.yaml  spec_aug_ratio_emb.yaml
src/conf/ckpts/: fense.yaml  loss.yaml
src/conf/data/: audiocaps.yaml  clotho.yaml  hdf.yaml  macs.yaml  none.yaml  wavcaps.yaml
src/conf/dm/: hdf.yaml
src/conf/evaluator/: aac.yaml  none.yaml
src/conf/expt/: audiocaps_cnext_bl_v6.yaml  audiocaps_cnext_nobl_v6.yaml  audiocaps_cnn14_bl_v6.yaml  audiocaps_cnn14_nobl_v6.yaml  audiocaps_cnn14_pann_v6.yaml  camw_cnext_bl_for_a.yaml  camw_cnext_bl_for_ac.yaml  camw_cnext_bl_for_c.yaml  clotho_cnext_bl.yaml  clotho_cnext_nobl.yaml  clotho_cnn10.yaml  clotho_cnn14_att.yaml  clotho_cnn14_bl.yaml  clotho_cnn14_nobl.yaml  clotho_cnn14_pann.yaml  clotho_mel64.yaml  hp_audiocaps_clotho_v2.yaml  hp_audiocaps_v2.yaml  hp_clotho_v1.yaml  hp_clotho_v2.yaml  task_ds_src_camw.yaml
src/conf/hydra/: custom.yaml
src/conf/hydra/job_logging/: custom.yaml
src/conf/launcher/: local.yaml
src/conf/logger/: custom_tb.yaml
src/conf/path/: local.yaml
src/conf/pl/: baseline.yaml  conette.yaml
src/conf/text_t/: ident.yaml  none.yaml
src/conf/tok/: spacy.yaml  test.yaml
src/conf/trainer/: dev.yaml  fit.yaml  fit2.yaml  fit_test.yaml  lim2.yaml  predict2.yaml  test.yaml  test2.yaml
src/conf/trainer/plugins/: lightning.yaml  none.yaml  slurm.yaml
src/conf/trainer/profiler/: none.yaml  pytorch.yaml
src/conf/trainer/strategy/: ddp.yaml  ddp_spawn.yaml  none.yaml
tests/: test_inference.py
